# rag-diagnostic-agent-vercel

./: .gitignore  README.md  Report.md  pyproject.toml  requirements.lock.txt  requirements.txt  vercel.json
api/: index.py
backend/: main.py
backend/app/: data_loader.py
backend/app/v1_baseline/: agent.py  retrievers.py
backend/app/v2_rerank/: agent.py  retrievers.py
backend/data/: intervention_kb.json  noisy_intervention_kb.json  synthetic_evaluation_set.json
backend/evals/: run_ragas_v1.py  run_ragas_v2.py  test.py
backend/evals/results/: noisy_baseline_metrics.json  noisy_baseline_results.csv  reranker_metrics.json  reranker_plus_prompt_metrics.json  reranker_plus_prompt_results.csv  reranker_results.csv  v1_baseline_metrics.json  v1_baseline_results.csv
data/: evaluation_set.json  item_cases.json  item_cases_full.json  item_cases_narrative.json
frontend/app/: page.tsx
